--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "react-contacts",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/mojib2014/react-contacts",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -16,9 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
